...
    <string name="registration">Registration</string>
    <string name="register_button">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="incorrect_email_err_msg">Please enter email address in correct format</string>
    <string name="incorrect_pass_err_msg">Please enter password longer than 8 characters</string>
    <string name="passwords_dont_match_err_msg">Both passwords should match</string>
    <string name="registration_success_msg">Registered Successfully</string>
    <string name="welcome_title">Welcome</string>
    <string name="login_title">Login</string>
    <string name="logout">Logout</string>
    <string name="login_button">Login</string>
    <string name="login_success_msg">Logged In</string>
    <string name="select_your_chat_msg">Select your chat:</string>
    <string name="no_account_register">Don\'t have an account? Register now!</string>
    <string name="chat_room_photo_cd">Chat Room photo</string>
    <string name="type_msg_hint">Type a message</string>
...
